





import java.util.List;
import java.util.ArrayList;

public class Extend  {






    private UseCase_UseCase usecase_usecase;


    public Extend(
    ) {
    }



    public UseCase_UseCase getUsecase_usecase() {
        return usecase_usecase;
    }

    public void setUsecase_usecase(UseCase_UseCase usecase_usecase) {
        this.usecase_usecase = usecase_usecase;
    }

}