





import java.util.List;
import java.util.ArrayList;

public class Include  {






    private UseCase_UseCase usecase_usecase;


    public Include(
    ) {
    }



    public UseCase_UseCase getUsecase_usecase() {
        return usecase_usecase;
    }

    public void setUsecase_usecase(UseCase_UseCase usecase_usecase) {
        this.usecase_usecase = usecase_usecase;
    }

}