





import java.util.List;
import java.util.ArrayList;

public class UseCase  {






    private UseCase_Extend usecase_extend;


    public UseCase(
    ) {
    }



    public UseCase_Extend getUsecase_extend() {
        return usecase_extend;
    }

    public void setUsecase_extend(UseCase_Extend usecase_extend) {
        this.usecase_extend = usecase_extend;
    }

}