





import java.util.List;
import java.util.ArrayList;

public class UseCase_Actor extends NamedElement {




    public UseCase_Actor(
    ) {
        super(
        );
    }




}