





import java.util.List;
import java.util.ArrayList;

public class UseCase_Association extends NamedElement {






    private UseCase usecase;


    public UseCase_Association(
    ) {
        super(
        );
    }



    public UseCase getUsecase() {
        return usecase;
    }

    public void setUsecase(UseCase usecase) {
        this.usecase = usecase;
    }

}