





import java.util.List;
import java.util.ArrayList;

public class UseCase_BehavioredClassifier  {




    public UseCase_BehavioredClassifier(
    ) {
    }




}