





import java.util.List;
import java.util.ArrayList;

public class UseCase_Extend  {




    public UseCase_Extend(
    ) {
    }




}