





import java.util.List;
import java.util.ArrayList;

public class UseCase_NamedElement  {

    private String name;



    public UseCase_NamedElement(
        String name    ) {
        this.name = name;
    }


    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }


}