





import java.util.List;
import java.util.ArrayList;

public class UseCase_UseCase extends NamedElement {




    public UseCase_UseCase(
    ) {
        super(
        );
    }




}