





import java.util.List;
import java.util.ArrayList;

public class NamedElement  {






    private emof_Comment emof_comment;


    public NamedElement(
    ) {
    }



    public emof_Comment getEmof_comment() {
        return emof_comment;
    }

    public void setEmof_comment(emof_Comment emof_comment) {
        this.emof_comment = emof_comment;
    }

}